--- a/package.json
+++ b/package.json
@@ -4,15 +4,9 @@
   "description": "Full-stack employee task tracker application",
   "main": "backend/src/server.js",
   "scripts": {
-    "start": "node backend/src/server.js",
-    "dev": "concurrently \"cd backend && npm run dev\" \"cd frontend && npm run dev\"",
-    "build": "node build.js",
-    "install-all": "npm install && cd backend && npm install && cd ../frontend && npm install"
+    "start": "node backend/src/server.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "concurrently": "^8.2.2"
-  }
+  "license": "ISC"
 }
